--- a/src/main/resources/com/example/carwash/empresarial-view.fxml
+++ b/src/main/resources/com/example/carwash/empresarial-view.fxml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.carwash.EmpresarialView"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="459.0" prefWidth="702.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.carwash.controller.EmpresarialView">
+   <children>
+      <ListView layoutX="475.0" layoutY="8.0" prefHeight="445.0" prefWidth="223.0"  fx:id="agendamentosListView" onMouseClicked="#mostrarDetalhes" />
+      <Button fx:id="marcarButton" layoutX="349.0" layoutY="414.0" mnemonicParsing="false" onAction="#marcarConcluido" prefHeight="31.0" prefWidth="117.0" text="Marcar concluido" />
+      <Label fx:id="nomeUsuarioLabel" layoutX="36.0" layoutY="43.0" prefHeight="17.0" prefWidth="385.0" />
+      <Label fx:id="descricaoLabel" layoutX="36.0" layoutY="77.0" prefHeight="31.0" prefWidth="385.0" />
+      <Label fx:id="tipoServicoLabel" layoutX="36.0" layoutY="130.0" prefHeight="17.0" prefWidth="385.0" />
+      <Label fx:id="planoLabel" layoutX="36.0" layoutY="176.0" prefHeight="17.0" prefWidth="385.0" />
+      <Label fx:id="dataLabel" layoutX="36.0" layoutY="221.0" prefHeight="17.0" prefWidth="385.0" />
+      <Label fx:id="precoLabel" layoutX="36.0" layoutY="322.0" prefHeight="17.0" prefWidth="160.0" />
+   </children>
 </AnchorPane>
