versao estavel e funcional

--- a/src/main/resources/com/example/carwash/singular-view.fxml
+++ b/src/main/resources/com/example/carwash/singular-view.fxml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.carwash.SingularView"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="459.0" prefWidth="702.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.carwash.controller.SingularViewController">
+   <children>
+      <Label fx:id="nomeLabel" layoutX="32.0" layoutY="37.0" prefHeight="17.0" prefWidth="103.0" text="Nome" />
+      <ListView fx:id="agendamentosListView" layoutX="488.0" layoutY="45.0" prefHeight="403.0" prefWidth="200.0" />
+      <Label layoutX="488.0" layoutY="14.0" prefHeight="17.0" prefWidth="200.0" text="Seus agendamentos" />
+      <Button fx:id="editarAgendamentoButton" layoutX="377.0" layoutY="420.0" mnemonicParsing="false" onAction="#editarAgendamento" prefHeight="25.0" prefWidth="103.0" text="Editar" />
+      <Button fx:id="removerAgendamentoButton" layoutX="260.0" layoutY="420.0" mnemonicParsing="false" onAction="#removerAgendamento" prefHeight="25.0" prefWidth="103.0" text="Remover" />
+      <Button fx:id="adicionarAgendamento" layoutX="143.0" layoutY="420.0" mnemonicParsing="false" onAction="#adicionarAgendamento" prefHeight="25.0" prefWidth="103.0" text="Adicionar" />
+      <Label fx:id="descricaoLabel" layoutX="84.0" layoutY="81.0" prefHeight="17.0" prefWidth="368.0" />
+      <Label fx:id="dataLabel" layoutX="84.0" layoutY="125.0" prefHeight="17.0" prefWidth="368.0" />
+      <Label fx:id="tipoServicoLabel" layoutX="84.0" layoutY="164.0" prefHeight="17.0" prefWidth="368.0" />
+      <Label fx:id="categoriaLabel" layoutX="84.0" layoutY="206.0" prefHeight="17.0" prefWidth="368.0" />
+      <Label fx:id="precoLabel" layoutX="84.0" layoutY="302.0" prefHeight="17.0" prefWidth="368.0" />
+   </children>
 </AnchorPane>
