--- a/src/main/resources/com/example/carwash/empresarial-view.fxml
+++ b/src/main/resources/com/example/carwash/empresarial-view.fxml
@@ -5,16 +5,17 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="459.0" prefWidth="702.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.carwash.controller.EmpresarialView">
+<AnchorPane prefHeight="459.0" prefWidth="887.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.carwash.controller.EmpresarialView">
    <children>
-      <ListView layoutX="475.0" layoutY="8.0" prefHeight="445.0" prefWidth="223.0"  fx:id="agendamentosListView" onMouseClicked="#mostrarDetalhes" />
-      <Button fx:id="marcarButton" layoutX="349.0" layoutY="414.0" mnemonicParsing="false" onAction="#marcarConcluido" prefHeight="31.0" prefWidth="117.0" text="Marcar concluido" />
-      <Label fx:id="nomeUsuarioLabel" layoutX="36.0" layoutY="43.0" prefHeight="17.0" prefWidth="385.0" />
-      <Label fx:id="descricaoLabel" layoutX="36.0" layoutY="77.0" prefHeight="31.0" prefWidth="385.0" />
-      <Label fx:id="tipoServicoLabel" layoutX="36.0" layoutY="130.0" prefHeight="17.0" prefWidth="385.0" />
-      <Label fx:id="planoLabel" layoutX="36.0" layoutY="176.0" prefHeight="17.0" prefWidth="385.0" />
-      <Label fx:id="dataLabel" layoutX="36.0" layoutY="221.0" prefHeight="17.0" prefWidth="385.0" />
-      <Label fx:id="precoLabel" layoutX="36.0" layoutY="322.0" prefHeight="17.0" prefWidth="160.0" />
+      <ListView fx:id="agendamentosListView" layoutX="658.0" layoutY="7.0" onMouseClicked="#mostrarDetalhes" prefHeight="445.0" prefWidth="223.0" />
+      <Button fx:id="marcarButton" layoutX="14.0" layoutY="95.0" mnemonicParsing="false" onAction="#marcarConcluido" prefHeight="40.0" prefWidth="177.0" text="Marcar concluido" />
+      <Label fx:id="nomeUsuarioLabel" layoutX="251.0" layoutY="40.0" prefHeight="17.0" prefWidth="385.0" />
+      <Label fx:id="descricaoLabel" layoutX="251.0" layoutY="84.0" prefHeight="31.0" prefWidth="385.0" />
+      <Label fx:id="tipoServicoLabel" layoutX="254.0" layoutY="131.0" prefHeight="17.0" prefWidth="394.0" />
+      <Label fx:id="planoLabel" layoutX="254.0" layoutY="177.0" prefHeight="17.0" prefWidth="394.0" />
+      <Label fx:id="dataLabel" layoutX="254.0" layoutY="221.0" prefHeight="17.0" prefWidth="394.0" />
+      <Label fx:id="precoLabel" layoutX="260.0" layoutY="330.0" prefHeight="17.0" prefWidth="163.0" />
+      <Button fx:id="relatorioButao" layoutX="14.0" layoutY="37.0" mnemonicParsing="false" onAction="#abrirRelatorio" prefHeight="40.0" prefWidth="177.0" text="Relatorio" />
+      <Button fx:id="produtosButton" layoutX="14.0" layoutY="148.0" mnemonicParsing="false" onAction="#abrirProdutos" prefHeight="40.0" prefWidth="177.0" text="Produtos" />
    </children>
 </AnchorPane>
