--- a/src/main/resources/com/example/carwash/gerirFuncionariosWash.fxml
+++ b/src/main/resources/com/example/carwash/gerirFuncionariosWash.fxml
@@ -5,15 +5,25 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import java.net.URL?>
 <AnchorPane prefHeight="459.0" prefWidth="702.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.carwash.controller.SingularViewController">
+   <stylesheets>
+      <URL value="@style2.css" />
+   </stylesheets>
+
    <children>
+      <!-- Lista de Funcionários -->
+      <Label layoutX="488.0" layoutY="14.0" prefHeight="17.0" prefWidth="200.0" text="Seus Funcionários" />
       <ListView fx:id="agendamentosListView" layoutX="488.0" layoutY="45.0" prefHeight="403.0" prefWidth="200.0" />
-      <Label layoutX="488.0" layoutY="14.0" prefHeight="17.0" prefWidth="200.0" text="Seus Funcionarios" />
-      <Button fx:id="editarAgendamentoButton" layoutX="377.0" layoutY="420.0" mnemonicParsing="false" onAction="#editarAgendamento" prefHeight="25.0" prefWidth="103.0" text="Editar" />
-      <Button fx:id="removerAgendamentoButton" layoutX="260.0" layoutY="420.0" mnemonicParsing="false" onAction="#removerAgendamento" prefHeight="25.0" prefWidth="103.0" text="Remover" />
+
+      <!-- Botões -->
       <Button fx:id="adicionarFuncionarioButton" layoutX="143.0" layoutY="420.0" mnemonicParsing="false" onAction="#adicionarAgendamento" prefHeight="25.0" prefWidth="103.0" text="Adicionar" />
-      <Label fx:id="nomeLabel" layoutX="84.0" layoutY="81.0" prefHeight="17.0" prefWidth="368.0" />
-      <Label fx:id="emailLabel" layoutX="84.0" layoutY="125.0" prefHeight="17.0" prefWidth="368.0" />
-      <Label fx:id="senhaLabel" layoutX="84.0" layoutY="164.0" prefHeight="17.0" prefWidth="368.0" />
+      <Button fx:id="removerAgendamentoButton" layoutX="260.0" layoutY="420.0" mnemonicParsing="false" onAction="#removerAgendamento" prefHeight="25.0" prefWidth="103.0" text="Remover" />
+      <Button fx:id="editarAgendamentoButton" layoutX="377.0" layoutY="420.0" mnemonicParsing="false" onAction="#editarAgendamento" prefHeight="25.0" prefWidth="103.0" text="Editar" />
+
+      <!-- Labels de Detalhes do Funcionário -->
+      <Label fx:id="nomeLabel" layoutX="84.0" layoutY="81.0" prefHeight="17.0" prefWidth="368.0" text="Nome do Funcionário" />
+      <Label fx:id="emailLabel" layoutX="84.0" layoutY="125.0" prefHeight="17.0" prefWidth="368.0" text="Email do Funcionário" />
+      <Label fx:id="senhaLabel" layoutX="84.0" layoutY="164.0" prefHeight="17.0" prefWidth="368.0" text="Senha" />
    </children>
 </AnchorPane>
