--- a/src/main/resources/com/example/carwash/adicionar-agendamento-view.fxml
+++ b/src/main/resources/com/example/carwash/adicionar-agendamento-view.fxml
@@ -1,29 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="543.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.carwash.controller.AdicionarAgendamentoController">
-   <!-- Título -->
-   <Label layoutX="20.0" layoutY="20.0" text="Adicionar Agendamento" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="362.0" prefWidth="380.0" style="-fx-background-color: #ecf0f1;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.carwash.controller.AdicionarAgendamentoController">
+   <children>
+      <!-- Título -->
+      <Label layoutX="20.0" layoutY="20.0" style="-fx-text-fill: #2c3e50; -fx-font-size: 18px; -fx-font-weight: bold;" text="Adicionar Agendamento" />
 
-   <!-- Data -->
-   <Label layoutX="20.0" layoutY="70.0" text="Data:" />
-   <DatePicker fx:id="dataPicker" layoutX="100.0" layoutY="70.0" />
+      <!-- Data -->
+      <Label layoutX="20.0" layoutY="70.0" style="-fx-text-fill: #2c3e50; -fx-font-size: 14px;" text="Data:" />
+      <DatePicker fx:id="dataPicker" layoutX="100.0" layoutY="70.0" prefHeight="26.0" prefWidth="250.0" style="-fx-background-color: white; -fx-border-color: #2c3e50; -fx-border-radius: 5px;" />
 
-   <!-- Descrição -->
-   <Label layoutX="20.0" layoutY="120.0" text="Descrição:" />
-   <TextField fx:id="descricaoTextField" layoutX="100.0" layoutY="120.0" prefWidth="250.0" />
+      <!-- Descrição -->
+      <Label layoutX="20.0" layoutY="120.0" style="-fx-text-fill: #2c3e50; -fx-font-size: 14px;" text="Descrição:" />
+      <TextField fx:id="descricaoTextField" layoutX="100.0" layoutY="116.0" prefWidth="250.0" style="-fx-background-color: white; -fx-border-color: #2c3e50; -fx-border-radius: 5px;" />
 
-   <!-- Tipo de Serviço -->
-   <Label layoutX="20.0" layoutY="170.0" text="Tipo de Serviço:" />
-   <ComboBox fx:id="tipoServicoComboBox" layoutX="100.0" layoutY="170.0" prefWidth="150.0" />
+      <!-- Tipo de Serviço -->
+      <Label layoutX="20.0" layoutY="170.0" style="-fx-text-fill: #2c3e50; -fx-font-size: 14px;" text="Tipo de Serviço:" />
+      <ComboBox fx:id="tipoServicoComboBox" layoutX="139.0" layoutY="166.0" prefHeight="26.0" prefWidth="214.0" style="-fx-background-color: white; -fx-border-color: #2c3e50; -fx-border-radius: 5px;" />
 
-   <!-- Plano -->
-   <Label layoutX="20.0" layoutY="220.0" text="Plano:" />
-   <ComboBox fx:id="planoComboBox" layoutX="100.0" layoutY="220.0" prefWidth="150.0" />
+      <!-- Plano -->
+      <Label layoutX="20.0" layoutY="220.0" style="-fx-text-fill: #2c3e50; -fx-font-size: 14px;" text="Plano:" />
+      <ComboBox fx:id="planoComboBox" layoutX="85.0" layoutY="216.0" prefHeight="26.0" prefWidth="269.0" style="-fx-background-color: white; -fx-border-color: #2c3e50; -fx-border-radius: 5px;" />
 
-   <!-- Botões -->
-   <Button layoutX="100.0" layoutY="270.0" mnemonicParsing="false" text="Confirmar" onAction="#confirmar" />
-   <Button layoutX="200.0" layoutY="270.0" mnemonicParsing="false" text="Cancelar" onAction="#cancelar" />
+      <!-- Botões -->
+      <Button layoutX="100.0" layoutY="270.0" mnemonicParsing="false" onAction="#confirmar" style="-fx-background-color: #2c3e50; -fx-text-fill: white; -fx-border-color: #2c3e50; -fx-border-radius: 5px; -fx-padding: 5px;" text="Confirmar" />
+      <Button layoutX="200.0" layoutY="270.0" mnemonicParsing="false" onAction="#cancelar" style="-fx-background-color: #c0392b; -fx-text-fill: white; -fx-border-color: #c0392b; -fx-border-radius: 5px; -fx-padding: 5px;" text="Cancelar" />
+   </children>
 </AnchorPane>
