--- a/src/main/resources/com/example/carwash/adicionarProduto.fxml
+++ b/src/main/resources/com/example/carwash/adicionarProduto.fxml
@@ -6,13 +6,12 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="315.0" prefWidth="213.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.carwash.controller.AdicionarProdutoController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="315.0" prefWidth="232.0" style="-fx-background-color: #ecf0f1; -fx-border-color: #2c3e50;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.carwash.controller.AdicionarProdutoController">
    <children>
-      <Label layoutX="24.0" layoutY="43.0" prefHeight="17.0" prefWidth="137.0" text="Tipo Produto" />
-      <Label layoutX="24.0" layoutY="146.0" text="Quantia" />
-      <ChoiceBox fx:id="tipoProdutoCB" layoutX="24.0" layoutY="68.0" prefWidth="150.0" />
-      <TextField fx:id="quantiaTF" layoutX="18.0" layoutY="175.0" prefHeight="25.0" prefWidth="150.0" />
-      <Button fx:id="adicionarProdutoButton" layoutX="24.0" layoutY="244.0" mnemonicParsing="false" onAction="#adicionarProduto" prefHeight="25.0" prefWidth="137.0" text="Adicionar" />
+      <Label layoutX="24.0" layoutY="43.0" prefHeight="17.0" prefWidth="137.0" style="-fx-text-fill: #2c3e50; -fx-font-size: 14px;" text="Tipo Produto" />
+      <Label layoutX="24.0" layoutY="146.0" style="-fx-text-fill: #2c3e50; -fx-font-size: 14px;" text="Quantia" />
+      <ChoiceBox fx:id="tipoProdutoCB" layoutX="24.0" layoutY="68.0" prefWidth="150.0" style="-fx-background-color: #ffffff; -fx-border-color: #2c3e50; -fx-border-radius: 5px; -fx-padding: 5px;" />
+      <TextField fx:id="quantiaTF" layoutX="18.0" layoutY="175.0" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #ffffff; -fx-border-color: #2c3e50; -fx-border-radius: 5px; -fx-padding: 5px;" />
+      <Button fx:id="adicionarProdutoButton" layoutX="24.0" layoutY="244.0" mnemonicParsing="false" onAction="#adicionarProduto" prefHeight="25.0" prefWidth="137.0" style="-fx-background-color: #2c3e50; -fx-text-fill: white; -fx-border-color: #2c3e50; -fx-border-radius: 5px; -fx-padding: 5px;" text="Adicionar" />
    </children>
 </AnchorPane>
