--- a/src/main/resources/com/example/carwash/logIn-view.fxml
+++ b/src/main/resources/com/example/carwash/logIn-view.fxml
@@ -6,13 +6,21 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
+<?import java.net.URL?>
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="444.0" prefWidth="609.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.carwash.controller.LogInController">
+   <stylesheets>
+      <URL value="@style3.css" />
+   </stylesheets>
+
    <children>
-      <Label layoutX="259.0" layoutY="125.0" text="Nome do usuario" />
-      <Label layoutX="291.0" layoutY="199.0" text="Senha" />
-      <PasswordField fx:id="senhaField" layoutX="231.0" layoutY="222.0" />
-      <Button fx:id="logInButton" layoutX="228.0" layoutY="262.0" mnemonicParsing="false" onAction="#logIn" prefHeight="25.0" prefWidth="149.0" text="LogIn" />
-      <Button fx:id="CadastroButton" layoutX="228.0" layoutY="301.0" mnemonicParsing="false" onAction="#cadastro" prefHeight="25.0" prefWidth="149.0" text="Cadastro" />
-      <TextField fx:id="nomeUsuarioField" layoutX="231.0" layoutY="152.0" />
+      <Label layoutX="259.0" layoutY="125.0" text="Nome do Usuário" styleClass="form-label" />
+      <TextField fx:id="nomeUsuarioField" layoutX="231.0" layoutY="152.0" prefWidth="149.0" />
+
+      <Label layoutX="291.0" layoutY="199.0" text="Senha" styleClass="form-label" />
+      <PasswordField fx:id="senhaField" layoutX="231.0" layoutY="222.0" prefWidth="149.0" />
+
+      <Button fx:id="logInButton" layoutX="228.0" layoutY="262.0" mnemonicParsing="false" onAction="#logIn" prefHeight="25.0" prefWidth="149.0" text="LogIn" styleClass="form-button" />
+
+      <Button fx:id="CadastroButton" layoutX="228.0" layoutY="301.0" mnemonicParsing="false" onAction="#cadastro" prefHeight="25.0" prefWidth="149.0" text="Cadastro" styleClass="form-button" />
    </children>
 </Pane>
